<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUsername"
            app:layout_constraintEnd_toEndOf="@+id/tvName"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/username"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvRepository"
            style="@style/TextContent.Color"
            app:layout_constraintEnd_toStartOf="@+id/tvFollowers"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/repository" />

        <TextView
            android:id="@+id/tvFollowers"
            style="@style/TextContent.Color"
            app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvRepository"
            app:layout_constraintTop_toTopOf="@+id/tvRepository"
            android:layout_marginStart="8dp"
            android:text="@string/followers" />

        <TextView
            android:id="@+id/tvFollowing"
            style="@style/TextContent.Color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvFollowers"
            app:layout_constraintTop_toTopOf="@+id/tvFollowers"
            android:layout_marginStart="8dp"
            android:text="@string/following" />

        <TextView
            style="@style/TextContent"
            app:layout_constraintEnd_toEndOf="@+id/tvRepository"
            app:layout_constraintStart_toStartOf="@+id/tvRepository"
            app:layout_constraintTop_toBottomOf="@+id/tvRepository"
            android:text="@string/repository" />

        <TextView
            style="@style/TextContent"
            app:layout_constraintEnd_toEndOf="@+id/tvFollowers"
            app:layout_constraintStart_toStartOf="@+id/tvFollowers"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowers"
            android:text="@string/followers" />

        <TextView
            style="@style/TextContent"
            app:layout_constraintEnd_toEndOf="@+id/tvFollowing"
            app:layout_constraintStart_toStartOf="@+id/tvFollowing"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowing"
            android:text="@string/following" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="250dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>