<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/username"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tvName"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/location"
            app:drawableStartCompat="@drawable/ic_outline_location_on_15"
            app:layout_constraintEnd_toEndOf="@+id/tvUsername"
            app:layout_constraintStart_toStartOf="@+id/tvUsername"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

        <TextView
            android:id="@+id/tvCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="2dp"
            android:text="@string/company"
            app:drawableStartCompat="@drawable/ic_outline_apartment_15"
            app:layout_constraintEnd_toEndOf="@+id/tvLocation"
            app:layout_constraintStart_toStartOf="@+id/tvLocation"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

        <TextView
            android:id="@+id/tvRepository"
            style="@style/TextContent.Color"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/repository"
            app:layout_constraintEnd_toStartOf="@+id/tvFollowers"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCompany" />

        <TextView
            android:id="@+id/tvFollowers"
            style="@style/TextContent.Color"
            android:layout_marginStart="8dp"
            android:text="@string/followers"
            app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvRepository"
            app:layout_constraintTop_toTopOf="@+id/tvRepository" />

        <TextView
            android:id="@+id/tvFollowing"
            style="@style/TextContent.Color"
            android:layout_marginStart="8dp"
            android:text="@string/following"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvFollowers"
            app:layout_constraintTop_toTopOf="@+id/tvFollowers" />

        <TextView
            style="@style/TextContent"
            android:text="@string/repository"
            app:layout_constraintEnd_toEndOf="@+id/tvRepository"
            app:layout_constraintStart_toStartOf="@+id/tvRepository"
            app:layout_constraintTop_toBottomOf="@+id/tvRepository" />

        <TextView
            style="@style/TextContent"
            android:text="@string/followers"
            app:layout_constraintEnd_toEndOf="@+id/tvFollowers"
            app:layout_constraintStart_toStartOf="@+id/tvFollowers"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />

        <TextView
            style="@style/TextContent"
            android:text="@string/following"
            app:layout_constraintEnd_toEndOf="@+id/tvFollowing"
            app:layout_constraintStart_toStartOf="@+id/tvFollowing"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="300dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>